# quorum

./: .gitignore  .quorumrc  AGENTS.md  README.md  agents  embed_agents.go  go.mod  go.sum  go.work  go.work.sum  justfile  main.go  main.py  pyproject.toml  quorum.md  quorum_go  run_blueprint_context.py  run_blueprint_enrichment.py  run_memory.py  run_risk_scorer.py  scratch_feedback.py  scratch_retrievers.py  scratch_risk.py  scratch_risk_scorer_F-03-f.py  scratch_trace_append.py  scratch_verify.py  validation_content.json
.agents/: config.yaml
cmd/: analyze.go  analyze_acceptance_coverage.go  analyze_blueprint_context.go  analyze_complexity_score.go  analyze_contract_check.go  analyze_contract_check_test.go  analyze_decomposition_coverage.go  analyze_decomposition_render.go  analyze_failure_lookup.go  analyze_feedback_partition.go  analyze_feedback_partition_test.go  analyze_fleet_preflight.go  analyze_risk_score.go  fleet.go  fleet_agentio.go  fleet_agentio_test.go  fleet_bundle.go  fleet_disable.go  fleet_disable_test.go  fleet_dispatch.go  fleet_dispatch_test.go  fleet_enable.go  fleet_enable_test.go  fleet_route.go  fleet_route_test.go  fleet_run.go  fleet_run_test.go  fleet_smoke.go  fleet_smoke_test.go  fleet_status.go  fleet_status_test.go  init.go  init_test.go  memory.go  memory_search.go  memory_search_test.go  memory_test.go  report.go  report_test.go  root.go  (+16 more)
docs/: fleet-run-for-agents.md
ideas/: 0-sistema-inteligente-enrutamiento-tareas-entre-múltiples-llms.analysis-v2.md  0-sistema-inteligente-enrutamiento-tareas-entre-múltiples-llms.md  aider.md  (+25 more)
(+619 files in other folders)
